--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -4,6 +4,13 @@
 
 <main class="d-flex justify-content-center align-items-center">
     <div class="principal-container d-flex justify-content-center align-items-center">
-        afa
+        <div class="modal-welcome">
+            <header class="cabecalho">
+                <div>
+                    <h5 class="titulo-cabecalho">Sistema de dados FORD</h5>
+                </div>
+            </header>
+            <h2 class="paragrafo-modal">Seja bem vindo(a)!</h2>
+        </div>
     </div>
 </main>
