--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -55,6 +55,12 @@
     font-weight: bold;
     font-size: 1.1rem;
     display: block;
+    transition: all 0.3s ease;
+  }
+  
+  .side-menu a:hover {
+    transform: scale(1.2);
+    
   }
   
   
