iniciando a página de dashboard

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
 <!-- Menu lateral -->
 <nav [@menuState]="menuOpen ? 'open' : 'closed'" class="side-menu">
   <div class="logo-container">
-    <img src="/imgs/ford.png" alt="Ford Logo" />
+    <img src="/img/ford.png" alt="Ford Logo" />
   </div>
   <ul>
     <li><a class="text-danger" (click)="navigateAndClose('/login')">logout</a></li>
