--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -6,7 +6,7 @@ main {
 .principal-container {
     width: 80vw;
     height: 80vh;
-    background-image: url("../../../../public/imgs/ranger.png");
+    background-image: url("../../../../public/img/ranger.png");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
