--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -2,12 +2,12 @@
 <div class="pagina d-flex min-vh-100">
   <!-- Seção da Imagem -->
   <div class="imagem-container d-none d-lg-flex col-lg-6 p-0">
-      <img src="imgs/ranger.png" alt="Ford Ranger" class="img-fluid w-50-">
+      <img src="img/ranger.png" alt="Ford Ranger" class="img-fluid w-50-">
   </div>
 
   <!-- Seção do Formulário -->
   <div class="formulario-container col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center p-5">
-      <img src="imgs/ford.png" alt="Ford Logo" class="mb-4 ford-logo" style="max-width: 150px; margin-top: -60px;">
+      <img src="img/ford.png" alt="Ford Logo" class="mb-4 ford-logo" style="max-width: 150px; margin-top: -60px;">
 
       <h2 class="text-success fw-bold mb-4">Boas-vindas</h2>
 
@@ -32,7 +32,7 @@
                   [(ngModel)]="password"
                   required 
                   type="password"
-                  placeholder="Senha (123456)"
+                  placeholder="Senha (123)"
                   class="form-control border-0 border-bottom rounded-0 py-2 px-0"
                   [class.is-invalid]="errorMessage">
           </div>
