--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,4 @@
+<div class="d-flex flex-column justify-content-center align-items-center h-100">
+  <router-outlet />
+</div>
 
-<router-outlet></router-outlet>
