--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,6 +1,10 @@
-html, body {
-    margin: 0;
+/* You can add global styles to this file, and also import other style files */
+* {
     padding: 0;
-    overflow: hidden;
-  }
-  
+    margin: 0;
+}
+
+body {
+    box-sizing: border-box;
+    height: 100vh;
+}
