--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -39,7 +39,7 @@
           <i class="bi bi-car-front-fill"></i>
           <div class="stat-info">
             <h4>Veículos</h4>
-            <p>24 modelos</p>
+            <p>4 modelos</p>
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
           <img src="img/territory.png" alt="Ford Maverick">
           <div>
             <h3>Ford Territory</h3>
-            <p>Um SUV para quem exige conforto e estilo.</p>
+            <p>Um SUV para quem exige conforto e estilo</p>
           </div>
         </div>
         
