enfeitando o site, tornando ele mas bonito

--- a/frontend/src/app/components/car-table/car-table.component.html
+++ b/frontend/src/app/components/car-table/car-table.component.html
@@ -11,8 +11,8 @@
     </thead>
     <tbody>
         <tr>
-            <td class="d-flex">
-                <input (change)="onChangeVin($event)" type="text" placeholder="{{ vin }}" value="{{ vin }}" class="w-100 align-self-center">
+            <td class="">
+                <input (change)="onChangeVin($event)" type="text" placeholder="{{ vin }}" value="{{ vin }}" class="w-100 align-self-center mt-2">
             </td>
             <td class="p-3">{{odometro}}Km</td>
             <td class="p-3">{{nivelCombustivel}}%</td>
