--- a/frontend/src/app/components/menu/menu.component.html
+++ b/frontend/src/app/components/menu/menu.component.html
@@ -8,8 +8,8 @@
 <div class="offcanvas offcanvas-start sidebar-menu" tabindex="-1" id="sidebarMenu" aria-labelledby="sidebarMenuLabel">
   <div class="offcanvas-header">
     <div class="sidebar-brand">
-      <img src="img/ford.png" alt="Ford Logo" class="sidebar-logo">
-      <h5 class="sidebar-title" id="sidebarMenuLabel">Ford Enter</h5>
+      <img src="img/ford-logo.svg" alt="Ford Logo" class="sidebar-logo">
+      <h5 class="sidebar-title" id="sidebarMenuLabel">Ford System</h5>
     </div>
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
